zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__open_command_pane_background_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\",\nnew_tab_event).replace(&format!(\"{:?}\", temp_folder.path()), \"\\\"CWD\\\"\")"
---
Some(
    SpawnTerminal(
        Some(
            RunCommand(
                RunCommand {
                    command: "/path/to/my/file.rs",
                    args: [
                        "arg1",
                        "arg2",
                    ],
                    cwd: Some(
                        "CWD",
                    ),
                    hold_on_close: true,
                    hold_on_start: false,
                    originating_plugin: Some(
                        OriginatingPlugin {
                            plugin_id: 0,
                            client_id: 1,
                            context: {},
                        },
                    ),
                    use_terminal_title: false,
                    resurrected: false,
                },
            ),
        ),
        None,
        NoPreference {
            borderless: None,
        },
        true,
        ClientId(
            1,
        ),
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_lines: [],
            },
        ),
        false,
    ),
)
