zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__open_command_pane_floating_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    SpawnTerminal(
        Some(
            RunCommand(
                RunCommand {
                    command: "/path/to/my/file.rs",
                    args: [
                        "arg1",
                        "arg2",
                    ],
                    cwd: None,
                    hold_on_close: true,
                    hold_on_start: false,
                    originating_plugin: Some(
                        OriginatingPlugin {
                            plugin_id: 0,
                            client_id: 1,
                            context: {},
                        },
                    ),
                    use_terminal_title: false,
                    resurrected: false,
                },
            ),
        ),
        None,
        Floating(
            None,
        ),
        false,
        ClientId(
            1,
        ),
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_lines: [],
            },
        ),
        false,
    ),
)
